--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,15 @@
+
+.box{
+  width: 120px;
+  height: 400px;
+  background-color: #444;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
 .container {
     display: flex;
     flex-direction: column;
@@ -13,17 +25,26 @@
   }
   
   .red {
-    background-color: red;
+    background-color: #ff4d4d; 
+    box-shadow: 0 0 20px #ff4d4d; 
+    animation: pulse 1s infinite; 
+    margin-top: 20px;
   }
   
   .yellow {
     background-color: yellow;
+    box-shadow: 0 0 30px yellow;
+    animation: pulse 1s infinite;
   }
   
   .green {
     background-color: green;
+    box-shadow: 0 0 20px green; 
+    animation: pulse 1s infinite;
   }
   
   .active {
     border: 2px solid white; 
   }
+
+  
